[tool.poetry]
name = "streamlit-app-test"
version = "0.1.0"
description = ""
authors = ["Masuda Shinsuke <shinsuke.masuda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
watchdog = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
